@@ -1,3 +1,10 @@
+2004/01/30 22:49 (-0500) muppetman
+
+	A examples/filesel_multisel.pl
+	A examples/multisel.pl
+	M MANIFEST
+	  some examples i had lying around.
+
 2004/01/30 08:06 (-0500) rwmcfa1
 
 	* t/Gdk.t: wholey crap, s missing from the work test, DISPLAY was unset
